--- a/ai-text-interface/src/components/main/main.css
+++ b/ai-text-interface/src/components/main/main.css
@@ -1,8 +1,16 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-color: #252829;
+}
+
 .chat-interface{
-    background: #252829;
-    width: 100%;
-    height: 80vh;
+    flex: 1;
+    padding: 1vw;
     color: #ccc;
+    padding-bottom: 15%;
+    overflow-y: auto;
 }
 
 .chat-interface .day{
@@ -11,17 +19,41 @@
 
 .chat-interface .message-box{
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
     
 }
+
+.chat-interface .message-box .icons{
+    background-color: gray;
+    display: flex;
+    gap: 2vw;
+    font-size: 3vw;
+    color: black;
+    padding: 1%;
+    border-radius: 10px;
+    margin-right: 63%;
+    cursor: pointer;
+    margin-top: 0;
+    margin-bottom: 2vw;
+}
+
+
 
 .chat-interface .message-box .inner-message-box {
     margin: 0;
     background-color: rebeccapurple;
-    max-width: 40%;
+    max-width: 100%;
+    width: 70%;
     padding: 2vw;
-    margin: 2vw;
+    margin: 2vw 2vw 1vw;
     border-top-right-radius: 20px;
+    
+}
+.chat-interface .message-box .inner-message-box p{
+    width: 50%;
+    color: #ccc;
+    white-space: wrap;
 }
 
 .chat-interface .ai-reply {
@@ -31,19 +63,31 @@
 .chat-interface .ai-reply .inner-ai-reply{
     margin: 0;
     background-color: grey;
-    max-width: 40%;
+    max-width: 100%;
     padding: 2vw;
     margin: 2vw;
     border-bottom-left-radius: 20px;
 }
 
  .form{
-    background-color: black
-    ;
+    /* background-color: black;
     height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    bottom: 0;
+    left: 0;
+    width: 100%; */
+
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2vw;
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .form form{
@@ -51,15 +95,19 @@
     /* justify-content: center; */
     align-items: center;
     gap: 2vw;
+
+
 }
 .form form textarea{
     outline: none;
     border: none;
     resize: none;
     width: 100%;
+    
     background-color: transparent;
     text-align: center;
     margin: auto 0;
+    
 }
 
 .form form .textarea{
@@ -69,4 +117,16 @@
     
     color: white;
     border-radius: 10px;
+}
+.ai-processors {
+    display: flex;
+    gap: 1vw;
+}
+
+.ai-processors select,
+.ai-processors .summarize button{
+    padding: 1vw;
+    border-radius: 10px;
+    background-color: gray;
+    cursor: pointer;
 }
